# MachineLearning

./: CMakeLists.txt
Machine Learning/: Classifier.h  Euclidean.cpp  Euclidean.h  HEOM.cpp  HEOM.h  HVDM.cpp  HVDM.h  Instance.cpp  Instance.h  KFoldCrossValidation.cpp  KFoldCrossValidation.h  KNN.cpp  KNN.h  Main.cpp  Metric.h  Types.h  Utils.cpp  Utils.h  Validation.h
Machine Learning/Classify/: Classifier.cpp  Classifier.h  kNN.cpp  kNN.h
Machine Learning/Clustering/: Clustering.cpp  Clustering.h  PAM.cpp  PAM.h  kMeans.cpp  kMeans.h
Machine Learning/InstanceSelection/: ENN.cpp  ENN.h  IBR.cpp  IBR.h  ISBM.cpp  ISBM.h  ISR.cpp  ISR.h  ISRB.cpp  ISRB.h  ISRT.cpp  ISRT.h  InstanceSelection.cpp  InstanceSelection.h  LSBo.cpp  LSBo.h  LSCo.cpp  LSCo.h  LSSm.cpp  LSSm.h  PSC.cpp  PSC.h  PSR.cpp  PSR.h
Machine Learning/Metrics/: Euclidean.cpp  Euclidean.h  HEOM.cpp  HEOM.h  HVDM.cpp  HVDM.h  Metric.h
Machine Learning/Misc/: Instance.cpp  Instance.h  Plot.cpp  Plot.h  Types.h  Utils.cpp  Utils.h  mathplotlibcpp.h
Machine Learning/Validation/: Validation.h  kFoldCrossValidation.cpp  kFoldCrossValidation.h
